--- a/app/src/main/res/layout/fragment_task_list2.xml
+++ b/app/src/main/res/layout/fragment_task_list2.xml
@@ -1,13 +1,26 @@
+<!--
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dummies.tasks.fragment.TaskListFragment">
+    -->
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!--
+<TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
+
+-->
+
+<!-- Unsere Recyclerview, die eine Endlosliste anzeigt -->
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recycler"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    />
