--- a/app/src/main/res/layout/card_task.xml
+++ b/app/src/main/res/layout/card_task.xml
@@ -6,4 +6,39 @@
     android:layout_width="match_parent"
     android:layout_height="100dp">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:layout_alignParentStart = "true"/>
+
+        <TextView
+            style="@android:style/TextAppearance.Medium.Inverse"
+            android:id="@+id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:padding="10dp"
+            android:layout_alignTop="@+id/image"
+            android:layout_toEndOf="@+id/image" />
+
+        <TextView
+            style="@android:style/TextAppearance.Inverse"
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:padding="10dp"
+            android:layout_alignStart="@+id/text1"
+            android:layout_below="@+id/text1" />
+
+    </RelativeLayout>
+
 </android.support.v7.widget.CardView>
