--- a/app/src/main/res/layout/card_task.xml
+++ b/app/src/main/res/layout/card_task.xml
@@ -11,9 +11,9 @@
     android:layout_marginEnd="@dimen/gutter"
     android:layout_gravity="center"
     android:elevation="@dimen/task_card_elevation"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:foreground="?android:attr/selectableItemBackground" >
 
-    card_view:cardCornerRadius="0dp" >
+    <!-- card_view:cardCornerRadius="0dp" > -->
 
     <RelativeLayout
         android:layout_width="match_parent"
