taskListActivityFragment in TaskListFragment geändert in 3 xmls

--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -15,6 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment"
-        android:name="com.dummies.tasks.taskListActivityFragment" />
+        android:name="com.dummies.tasks.fragment.TaskListFragment" />
 
     </LinearLayout>
