--- a/app/src/main/res/layout/card_task.xml
+++ b/app/src/main/res/layout/card_task.xml
@@ -17,7 +17,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/cardview_light_background">
+
+        <!-- android:background sorgt (endlich!) für hellen Hintergrund -->
 
         <ImageView
             android:id="@+id/image"
