status_bar_height

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
 
     <!--Hervorhebung unserer Task-Karten -->
     <dimen name="task_card_elevation">6dp</dimen>
+    <dimen name="status_bar_height">25dp</dimen>
 
 </resources>
