--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,19 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <!-- Eine Variante des AppTheme, aber mit transparenter ActionBar. Außerdem
+    mit durchscheinender (grauer) Status- und Navigationsleiste. -->
+    <style name="AppTheme.TransparentActionBar" parent="AppTheme">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:actionBarStyle">@style/AppTheme.TransparentActionBar</item>
+    </style>
+
+    <!-- Der TransparentActionBar-Stil für AppTheme.TransparentActionBar -->
+    <style name="TransparentActionBar" parent="android:Theme.Material">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
 </resources>
