Style für den Löschdialog hinzugefügt - WTF, es lag daran D: - Danke noch mal an StackOverflow *-*

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,4 +35,7 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <!-- Style für den Langklickdialog -->
+    <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert" />
+
 </resources>
