Zeit und Datum hinzufügen - bis S. 230

--- a/app/src/main/res/layout/fragment_task_edit.xml
+++ b/app/src/main/res/layout/fragment_task_edit.xml
@@ -25,6 +25,7 @@
             android:layout_below="@id/image"
             android:hint="@string/title" />
 
+        <!-- Die Zeit-Schaltfläche -->
         <TextView
             style="@android:style/TextAppearance.Medium"
             android:id="@+id/task_time"
@@ -34,6 +35,7 @@
             android:layout_alignEnd="@id/title"
             android:layout_marginEnd="3dp"/>
 
+        <!-- Die Datum-Schaltfläche -->
         <TextView
             style="@android:style/TextAppearance.Medium"
             android:id="@+id/task_date"
